--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,9 @@
     <title>Daily Java Tips</title>
   </head>
   <body>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap');
+      </style>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
